--- a/index.html
+++ b/index.html
@@ -78,47 +78,19 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p>Hi! My name is Ali Asghar, currently studying Bachelor's in Software Engineering at COMSATS University. I have strong skills in website and application development and work as a freelancer. I have completed many projects, making both websites and mobile apps. My studies and work experience have given me a solid understanding of software development. I enjoy using technology to solve problems and am always looking to learn new things.
-
+        <p>Hello! I'm Ali Asghar, a final-year Software Engineering student at COMSATS University. I specialize in cross-platform development, creating web and mobile applications that work seamlessly on any device. By day, I'm buried in code and coursework. By night, I'm a freelance developer tackling exciting projects.
+<br>
+          From crafting intuitive user interfaces to ensuring smooth functionality, I blend technical expertise with a touch of creativity. My toolkit includes HTML, CSS, PHP and Flutter—basically, if it's digital, I can build it.
+     <br>     
+          I'm passionate about using technology to solve problems and create innovative solutions. Let's turn your ideas into reality, one line of code at a time!
         </p>
       </div><!-- End Section Title -->
 
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
-        <div class="row gy-4 justify-content-center">
-          <div class="col-lg-4">
-            <img src="assets/img/profile.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-8 content">
-            <h2>Application &amp; Website Developer.</h2>
-            <p class="fst-italic py-3">
-              I have strong skills in web and app development, with hands-on experience in creating robust websites and intuitive mobile apps. My studies in Software Engineering and freelance work have equipped me with the knowledge and practical expertise to deliver high-quality projects efficiently.
-            </p>
-            <div class="row">
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>23 October 2002</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+923234271711</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Lahore, Pakistan</span></li>
-                </ul>
-              </div>
-              <div class="col-lg-6">
-                <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelor's</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>aliasgh478@gmail.com</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Services</h2>
+        <h3>Website & Application Development</h3>
+        
       </div>
-
-    </section><!-- /About Section -->
-
     <!-- Stats Section -->
     <section id="stats" class="stats section">
 
