--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h2>About</h2>
         <p>Hello! I'm Ali Asghar, a final-year Software Engineering student at COMSATS University. I specialize in cross-platform development, creating web and mobile applications that work seamlessly on any device. By day, I'm buried in code and coursework. By night, I'm a freelance developer tackling exciting projects.
 <br>
-          From crafting intuitive user interfaces to ensuring smooth functionality, I blend technical expertise with a touch of creativity. My toolkit includes HTML, CSS, PHP and Flutter—basically, if it's digital, I can build it.
+          From crafting intuitive user interfaces to ensuring smooth functionality, I blend technical expertise with a touch of creativity. My toolkit includes HTML, CSS, PHP, Flutter and many more—basically, if it's digital, I can build it.
      <br>     
           I'm passionate about using technology to solve problems and create innovative solutions. Let's turn your ideas into reality, one line of code at a time!
         </p>
