--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
 
       <div class="container section-title" data-aos="fade-up">
         <h2>Services</h2>
-        <h3>Website & Application Development</h3>
-        
+        <h4>Total services provided till now.</h4>
+        <br>
+        <h6>Website & Application Development</h6>
       </div>
     <!-- Stats Section -->
     <section id="stats" class="stats section">
